Sorry, forget to push the changes..

--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
       class="dw-component" 
       id="user-menu" 
       data-component="UserMenu" 
-      data-stores='["UserStore"]'
       data-props='{"active_link":"home"}'
+    ></div>
+        <div 
+      class="dw-component" 
+      id="user-counter" 
+      data-component="Counters" 
+      data-props=''
     ></div>
     <script src="build/dashboard.js"></script>
   </body>
